--- a/.github/workflows/build-realease.yml
+++ b/.github/workflows/build-realease.yml
@@ -6,6 +6,9 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   build:
     if: github.event.pull_request.merged == true
