--- a/qsequoia2/scripts/actions.yaml
+++ b/qsequoia2/scripts/actions.yaml
@@ -1,36 +1,36 @@
 actions:
   "📝 Création dossier SIG":
-    module: "QSEQUOIA-2.scripts.PY.create_SIG_folder"
+    module: "qsequoia2.scripts.PY.create_SIG_folder"
     function: "create_SIG_folder"
     skip_check: False
 
   "📊 Test R":
-    module: "QSEQUOIA-2.scripts.R.run_R"
+    module: "qsequoia2.scripts.R.run_R"
     function: "run_r_script"
     skip_check: False
 
   "🌳Create Qfield project from PARCA or UA":
-    module: "QSEQUOIA-2.scripts.PY.script_TERRAIN_POINT"
+    module: "qsequoia2.scripts.PY.script_TERRAIN_POINT"
     function: "create_terrain"
     skip_check: False
 
   "🔧Classification des relevées":
-    module: "QSEQUOIA-2.scripts.PY.records_orchestrator"
+    module: "qsequoia2.scripts.PY.records_orchestrator"
     function: "records_orchestrator"
     skip_check: False
   
   "🔧Carto-futaie":
-    module: "QSEQUOIA-2.scripts.utils.go_to_net"
+    module: "qsequoia2.scripts.utils.go_to_net"
     function: "go_to_cartofutaie"
     skip_check: True
 
   "🔧Kartenn-IA":
-    module: "QSEQUOIA-2.scripts.utils.go_to_net"
+    module: "qsequoia2.scripts.utils.go_to_net"
     function: "go_to_kartennAI"
     skip_check: True
 
   "🔧SequoiAPP":
-    module: "QSEQUOIA-2.scripts.utils.go_to_net"
+    module: "qsequoia2.scripts.utils.go_to_net"
     function: "go_to_SequoiAPP"
     skip_check: True
 
