--- a/qsequoia2/inst/qseq_functions.yaml
+++ b/qsequoia2/inst/qseq_functions.yaml
@@ -66,7 +66,7 @@ Utilitaire:
     skip_check: False
 
 Outils web principaux:
-  "Carto-futaie":
+  "Carto-Futaie":
     module: "qsequoia2.scripts.utils.go_to_net"
     function: "go_to_cartofutaie"
     skip_check: True
@@ -78,6 +78,26 @@ Outils web principaux:
 
   "SequoiAPP":
     module: "qsequoia2.scripts.utils.go_to_net"
-    function: "go_to_SequoiAPP"
+    function: "go_to_net"
+    skip_check: True
+  
+  "Github-SequoiAPP":
+    module: "qsequoia2.scripts.utils.go_to_net"
+    function: "go_to_net"
+    skip_check: True
+  
+  "Github du plugin":
+    module: "qsequoia2.scripts.utils.go_to_net"
+    function: "go_to_net"
+    skip_check: True
+  
+  "Signaler un bug":
+    module: "qsequoia2.scripts.utils.go_to_net"
+    function: "go_to_net"
+    skip_check: True
+  
+  "Documentation":
+    module: "qsequoia2.scripts.utils.go_to_net"
+    function: "go_to_net"
     skip_check: True
     
