--- a/qsequoia2/inst/qseq_URLS.yaml
+++ b/qsequoia2/inst/qseq_URLS.yaml
@@ -55,3 +55,32 @@ wmts:
     url: contextualWMSLegend=0&crs=EPSG:3857&dpiMode=7&featureCount=10&format=image/png&layers=IGNF_LIDAR-HD_MNH_ELEVATION.ELEVATIONGRIDCOVERAGE.SHADOW&styles=normal&tileMatrixSet=PM_0_18&tilePixelRatio=0&url=https://data.geopf.fr/wmts?SERVICE%3DWMTS%26VERSION%3D1.0.0%26REQUEST%3DGetCapabilities
 
 
+Outils web principaux:
+
+  Carto-Futaie:
+    display_name: "Carto-Futaie"
+    url: https://app.comitedesforets.com/login
+
+  SequoiAPP:
+    display_name: "SequoiAPP"
+    url: "https://app.SequoiAPP.com"
+  
+  Télédetection des essences par IA:
+    display_name: "Télédetection des essences par IA"
+    url: "https://drive.google.com/drive/folders/10tVmIe5IkF5Xtr_j3O8QRit144bU1coW"
+  
+  Github-SequoiAPP:
+    display_name: "github-SequoiAPP"
+    url: "https://github.com/SequoiApp"
+  
+  Github du plugin:
+    display_name: "github - qsequoia2"
+    url: "https://github.com/SequoiApp/Qsequoia2"
+  
+  Signaler un bug:
+    display_name: "github-issue"
+    url: "https://github.com/SequoiApp/Qsequoia2/issues"
+  
+  Documentation:
+    display_name: "github-documentation"
+    url: https://sequoiapp.github.io/Qsequoia2
